Fixes alignment on page navigation.

--- a/assets/scss/templates/_single-post.scss
+++ b/assets/scss/templates/_single-post.scss
@@ -42,15 +42,10 @@
     a {
       @include grid-column(6);
 
-      &:nth-child(2){
-        text-align: center;
+      &[rel=prev]{
+        text-align: left;
       }
-
-      &:first-child {
-
-      }
-
-      &:last-child {
+      &[rel=next] {
         text-align: right;
       }
     }
